--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "nuxt": "^3.3.3"
   },
   "dependencies": {
-    "@picocss/pico": "^1.5.7"
+    "@picocss/pico": "^1.5.7",
+    "bootstrap-vue": "^2.23.1"
   }
 }
